# Juicebox

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: copilot-instructions.md
src/juicebox/: Juicebox.tcss  __init__.py  __main__.py  app.py  exceptions.py  history.py  hotkeys.py  http.py  models.py  settings.py
src/juicebox/action/: search.py
src/juicebox/interactions/: __init__.py  loader.py  reddit.py
src/juicebox/sites/: __init__.py  base.py  reddit.py  unknown.py
tests/: reddit_subreddit.json  reddit_user.json  test_history.py  test_http.py  test_reddit.py  test_unknown.py
