[project]
name = "Juicebox"
version = "0.1.0"
description = "Juicebox is a Python TUI web browser for people who thought Lynx was too mainstream."
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [{ name = "Joakim Hellsén", email = "tlovinator@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Console",
]

requires-python = ">=3.14"
dependencies = [
    "anyio>=4.12.0",
    "curl_cffi>=0.7.2",
    "markdownify>=1.2.2",
    "platformdirs>=4.5.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "readability-lxml>=0.8.4.1",
    "selectolax>=0.4.6",
    "sqlmodel>=0.0.31",
    "textual-image[textual]>=0.8.4",
    "textual[syntax]>=6.9.0",
    "tldextract>=5.3.0",
]

[dependency-groups]
dev = ["pytest", "pytest-asyncio", "textual-dev"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
preview = true
fix = true
unsafe-fixes = true
lint.fixable = ["ALL"]
lint.pydocstyle.convention = "google"
lint.select = ["ALL"]
lint.unfixable = ["F841"]             # Don't remove unused variables

lint.ignore = [
    "CPY001", # Checks for the absence of copyright notices within Python files.
    "D100",   # Checks for undocumented public module definitions.
    "D104",   # Checks for undocumented public package definitions.
    "D106",   # Checks for undocumented public class definitions, for nested classes.
    "D107",   # Checks for public __init__ method definitions that are missing docstrings.
    "ERA001", # Checks for commented-out Python code.
    "FIX002", # Checks for "TODO" comments.
    "G004",   # Checks for uses of f-strings to format logging messages.

    # Conflicting lint rules when using Ruff's formatter
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "COM812", # Checks for the absence of trailing commas.
    "COM819", # Checks for the presence of prohibited trailing commas.
    "D206",   # Checks for docstrings that are indented with tabs.
    "D300",   # Checks for docstrings that use '''triple single quotes''' instead of """triple double quotes""".
    "E111",   # Checks for indentation with a non-multiple of 4 spaces.
    "E114",   # Checks for indentation of comments with a non-multiple of 4 spaces.
    "E117",   # Checks for over-indented code.
    "ISC001", # Checks for implicitly concatenated strings on a single line.
    "ISC002", # Checks for implicitly concatenated strings that span multiple lines.
    "Q000",   # Checks for inline strings that use single quotes or double quotes, depending on the value of the lint.flake8-quotes.inline-quotes option.
    "Q001",   # Checks for multiline strings that use single quotes or double quotes, depending on the value of the lint.flake8-quotes.multiline-quotes setting.
    "Q002",   # Checks for docstrings that use single quotes or double quotes, depending on the value of the lint.flake8-quotes.docstring-quotes setting.
    "Q003",   # Checks for strings that include escaped quotes, and suggests changing the quote style to avoid the need to escape them.
    "W191",   # Checks for indentation that uses tabs.
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D103", "PLR2004", "ARG001", "PLC0415"]
"src/juicebox/sites/*" = ["PLR6301", "ARG002"]

[tool.ruff.lint.isort]
force-single-line = true
